--- a/Ingenio.PortalWebExterno/Content/sass/main_style.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.scss
@@ -2,7 +2,7 @@
 @import 'abstracts/fonts';
 @import 'abstracts/functions';
 
-@import 'pages/home';
+@import 'pages/_home';
 @import 'pages/credito';
 @import 'pages/nuestasAgencias';
 @import 'pages/Convenios';
@@ -13,6 +13,7 @@
 @import 'pages/_directorio';
 @import 'pages/_ActualizacionDatos';
 @import 'pages/FormulariosAC';
+@import 'pages/_RteDian.scss';
 
 @import 'layout/_footer.scss';
 
