--- a/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
@@ -10,15 +10,15 @@
     ViewBag.Title = "Como Afiliarse";
 }
 @*<script type="text/javascript">
-    var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
-    window.smartsupp || (function (d) {
-        var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-        s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-        c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-        c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-    })(document);
-</script>*@
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
+        window.smartsupp || (function (d) {
+            var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
+            s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
+            c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
+            c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
+        })(document);
+    </script>*@
 <style>
     #heading-breadcrumbs {
         background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/background-formularo.jpg) center;
@@ -26,9 +26,12 @@
         /* margin-bottom: 40px; */
     }
 </style>
-<section class="imagen_directorio">
-    <img src="~/img/Img_Web2/Formulario.png" alt="Numero principal: 7366087" />
+
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/Formulario.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/formulario_cel.png" alt="Numero principal: 7366087" />
 </section>
+
 <section class="big__container__FA">
     <h4 class="tituleAnimation" style="text-align: center">Afíliese y disfrute de nuestro completo portafolio de productos, servicios y convenios.</h4>
 
