--- a/Ingenio.PortalWebExterno/Views/Home/ConceptosDeInteres.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ConceptosDeInteres.cshtml
@@ -28,7 +28,10 @@
 <!-- estilo para imagen con parallax-->
 <link rel="stylesheet" type="text/css" href="~/Content/parallax.css">
 
-
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/conceptos_interes.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/conceptos_interes_cel.png" alt="Numero principal: 7366087" />
+</section>
 
     <!-- contenido-->
 <section class="contenido">
