--- a/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ConveniosC.cshtml
@@ -19,6 +19,11 @@
 
 </style>
 
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/convenios_alianzas.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/convenios_alianzas_cel.png" alt="Numero principal: 7366087" />
+</section>
+
 <section class="container__Convenio">
     <div class="convenio__Header">
         <div class="convenio__text">
@@ -174,7 +179,6 @@
                     };
                 }
             })
-
         });
     });
 </script>
