--- a/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
@@ -7,7 +7,7 @@
 
 }
 
-<script type="text/javascript">
+@*<script type="text/javascript">
     var _smartsupp = _smartsupp || {};
     _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
     window.smartsupp || (function (d) {
@@ -16,7 +16,7 @@
         c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
         c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
     })(document);
-</script>
+</script>*@
 
 <!-- estilo contenido -->
 <style>
@@ -74,9 +74,12 @@
 @*<img src="~/Imagenes/multiportal1.jpg" style="width:1300px; height: 300px;" alt="Multiportal" class="img-responsive  center-block">*@
 @*<div class="parallaxbox" id="pb0" style="background-image: url('//img/fondos/multiportal1.jpg');"> </div>*@
 <!-- contenido-->
-<section class="imagen_directorio">
-    <img src="~/img/Img_Web2/portal.png" alt="Numero principal: 7366087" />
+
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/portal.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/portal_cel.png" alt="Numero principal: 7366087" />
 </section>
+
 <section id="aso" class="bar background-white no-mb" style="display:none;">
     <div class="container">
         <div class="row">
