--- a/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
@@ -6,7 +6,7 @@
     ViewBag.activo = "Conózcanos";
 }
 
-<script type="text/javascript">
+@*<script type="text/javascript">
     var _smartsupp = _smartsupp || {};
     _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
     window.smartsupp || (function (d) {
@@ -15,7 +15,7 @@
         c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
         c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
     })(document);
-</script>
+</script>*@
 
 <script src="https://kit.fontawesome.com/f9533edd0d.js" crossorigin="anonymous"></script>
 
@@ -51,9 +51,12 @@
     </div>
 </div>-->
 <!-- contenido-->
-<section class="imagen_directorio">
-    <img src="~/img/Img_Web2/agencias.png" alt="Numero principal: 7366087" />
+
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/agencias.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/agencias_cel.png" alt="Numero principal: 7366087" />
 </section>
+
 <section class="contenido">
     <div class="container container__nuestras_Agencias" style="background-color: rgba(255, 255, 255, 0.8); ">
         @*<ul class="nav nav-tabs" style="background-color: #ffffff">
