--- a/Ingenio.PortalWebExterno/Views/Home/RteDian.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/RteDian.cshtml
@@ -6,18 +6,6 @@
 
 }
 
-<script type="text/javascript">
-    var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
-    window.smartsupp || (function (d) {
-        var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-        s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-        c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-        c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-    })(document);
-</script>
-
-<!-- estilo contenido -->
 <style>
     .contenido {
         background-image: url(/img/texture-bw.png);
@@ -42,131 +30,90 @@
 <!-- imagen fondo1-->
 @*<img src="~/img/Dian-banner.png" style="width:1800px; height: 350px;" alt="Multiportal" class="img-responsive  center-block">*@
 <!-- contenido-->
-
 @*<a href="https://www.cofinal.com.co/Home/Contact">Contactanos</a>*@
 
-<section id="aso" class="bar background-white no-mb">
-    <div class="container">
-        <div class="row">            
-
-                <div class="heading text-center" style="margin-bottom:10px;padding-top:10px;">
-                    <h4>INFORME GESTIÓN AÑO 2021</h4>
-                </div>
-               
-                <table style="margin: 0 auto;">
-
-                    <tr>
-                        <th>No</th>
-                        <th>Descripción Archivo</th>
-                        <th>Archivo</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Informe Gestión</td>
-                        <td><a href="~/Formatos/Doc Dian/1.Informe de Gestion 2021.pdf" target="_blank">Descarga</a><br /></td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Estados Financieros</td>
-                        <td><a href="~/Formatos/Doc Dian/2.Estados Financieros 2021.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Certificación Cumplimiento de Requisitos</td>
-                        <td><a href="~/Formatos/Doc Dian/3.Cumplimiento de requisitos 2021.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Escritura Constitución Cofinal</td>
-                        <td><a href="~/Formatos/Doc Dian/4.Escritura Constitucion.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Certificado Existencia y Representación Legal</td>
-                        <td><a href="~/Formatos/Doc Dian/5.Certificado de Representacion Legal COFINAL.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>Acta Asamblea 70 Cofinal</td>
-                        <td><a href="~/Formatos/Doc Dian/6.Acta asamblea No.70-2022.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>7</td>
-                        <td>Certificación Antecedentes Directivos </td>
-                        <td><a href="~/Formatos/Doc Dian/7.Certificado de antecedentes 2021.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>8</td>
-                        <td>Erogaciones Directivos</td>
-                        <td><a href="~/Formatos/Doc Dian/8.Erogaciones año 2021.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>9</td>
-                        <td>Estatutos Cofinal</td>
-                        <td><a href="~/Formatos/Doc Dian/9.Estatutos.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>10</td>
-                        <td>Memoria Económica</td>
-                        <td><a href="~/Formatos/Doc Dian/10.Memoria Economica 2021.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                    <tr>
-                        <td>11</td>
-                        <td>Dictamen de Revisor Fiscal</td>
-                        <td><a href="~/Formatos/Doc Dian/11.Dictamen REVISORIA FISCAL 2021.pdf" target="_blank">Descarga</a></td>
-                    </tr>
-                   
-                </table>
-         
-
-
-
-                    <style>
-                        /* Curso CSS estilos aprenderaprogramar.com*/
-                        body {
-                            font-family: Arial, Helvetica, sans-serif;
-                        }
-
-                        table {
-                            font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-                            font-size: 18px;
-                            margin: 45px;
-                            width: 650px;
-                            text-align: center;
-                            border-collapse: collapse;
-                        }
-
-                        th {
-                            font-size: 20px;
-                            font-weight: normal;
-                            text-align: center;
-                            padding: 8px;
-                            background: #ff852d;
-                            border-top: 4px solid #d56506;
-                            border-bottom: 1px solid #fff;
-                            color: #ffffff;
-                        }
-
-                        td {
-                            padding: 8px;
-                            background: #FFB987;
-                            border-bottom: 1px solid #fff;
-                            color: #373737;
-                            border-top: 1px solid transparent;
-                        }
-
-                        tr:hover td {
-                            background: #d56506;
-                            color: #000000;
-                        }
-                      
-                    </style>                    
-                </div>           
-        </div>   
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/dian.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/dian_cel.png" alt="Numero principal: 7366087" />
 </section>
 
+
+
+<div class="heading text-center" style="margin-bottom:10px;padding-top:10px;">
+    <h4>INFORME GESTIÓN AÑO 2021</h4>
+</div>
+<div class="container__Dian">
+
+    <table class="content-table ">
+        <tr style="border-top:1px dashed white;">
+            <th>No</th>
+            <th>Descripción Archivo</th>
+            <th>Archivo</th>
+        </tr>
+        <tr class="active-row">
+            <td>1</td>
+            <td>Informe Gestión</td>
+            <td><a href="~/Formatos/Doc Dian/1.Informe de Gestion 2021.pdf" target="_blank">Descarga</a><br /></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Estados Financieros</td>
+            <td><a href="~/Formatos/Doc Dian/2.Estados Financieros 2021.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Certificación Cumplimiento de Requisitos</td>
+            <td><a href="~/Formatos/Doc Dian/3.Cumplimiento de requisitos 2021.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Escritura Constitución Cofinal</td>
+            <td><a href="~/Formatos/Doc Dian/4.Escritura Constitucion.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Certificado Existencia y Representación Legal</td>
+            <td><a href="~/Formatos/Doc Dian/5.Certificado de Representacion Legal COFINAL.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Acta Asamblea 70 Cofinal</td>
+            <td><a href="~/Formatos/Doc Dian/6.Acta asamblea No.70-2022.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Certificación Antecedentes Directivos </td>
+            <td><a href="~/Formatos/Doc Dian/7.Certificado de antecedentes 2021.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>Erogaciones Directivos</td>
+            <td><a href="~/Formatos/Doc Dian/8.Erogaciones año 2021.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Estatutos Cofinal</td>
+            <td><a href="~/Formatos/Doc Dian/9.Estatutos.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>Memoria Económica</td>
+            <td><a href="~/Formatos/Doc Dian/10.Memoria Economica 2021.pdf" target="_blank">Descarga</a></td>
+        </tr>
+        <tr>
+            <td>11</td>
+            <td>Dictamen de Revisor Fiscal</td>
+            <td><a href="~/Formatos/Doc Dian/11.Dictamen REVISORIA FISCAL 2021.pdf" target="_blank">Descarga</a></td>
+        </tr>
+    </table>
+</div>
+
+
+
+
+
 <div class="container-fluid" style="margin-bottom: -6px;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,64L34.3,74.7C68.6,85,137,107,206,117.3C274.3,128,343,128,411,122.7C480,117,549,107,617,106.7C685.7,107,754,117,823,128C891.4,139,960,149,1029,154.7C1097.1,160,1166,160,1234,138.7C1302.9,117,1371,75,1406,53.3L1440,32L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(252,132,4,0.9)" fill-opacity="1" d="M0,64L34.3,74.7C68.6,85,137,107,206,117.3C274.3,128,343,128,411,122.7C480,117,549,107,617,106.7C685.7,107,754,117,823,128C891.4,139,960,149,1029,154.7C1097.1,160,1166,160,1234,138.7C1302.9,117,1371,75,1406,53.3L1440,32L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
 </div>
 
 <style>
