--- a/Ingenio.PortalWebExterno/Content/sass/layout/_footer.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/layout/_footer.scss
@@ -16,3 +16,25 @@
     justify-content: center;
     align-items: center;
 }
+
+.icono_whatsapp {
+    width: 60px;
+    height: 60px;
+    line-height: 51px;
+    border-radius: 50%;
+    font-size: 20px;
+    background-image: url("../../../img/Img_Web2/whatsapp_footer.png");
+    /*background-color:red;*/
+    background-size: contain;
+    /*background: linear-gradient(125deg, var(--valid), var(--verde2));*/
+    /*box-shadow: 0px 20px 20px -15px rgba(var(--verdecode),.8);*/
+    bottom: 30px;
+    text-align: center;
+    position: fixed;
+    right: 20px;
+    /*z-index: 10;*/
+
+    &:hover{
+        cursor:pointer;
+    }
+}
