--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -105,27 +105,27 @@
     }
 
     #textura {
-        background-color: #E76100;
+        background-color: rgba(252,132,4,0.9);
         -webkit-box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);
         -moz-box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);
         box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);
         padding-top: 20px;
-        margin-top: -20px;
+        /*margin-top: -20px;*/
         margin-bottom: 20px;
         padding-bottom: 20px;
     }
 </style>
 
-<script type="text/javascript">
-    var _smartsupp = _smartsupp || {};
-    _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
-    window.smartsupp || (function (d) {
-        var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-        s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-        c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-        c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-    })(document);
-</script>
+    @*<script type="text/javascript">
+        var _smartsupp = _smartsupp || {};
+        _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
+        window.smartsupp || (function (d) {
+            var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
+            s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
+            c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
+            c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
+        })(document);
+    </script>*@
 
 <!-- estilo para imagen con parallax-->
 <link rel="stylesheet" type="text/css" href="~/Content/parallax.css">
@@ -154,19 +154,20 @@
 <!--seccion video-->
 @*<div class="parallaxbox1" id="pb0" style="background-image:url(/img/ahorro1-2.jpg)">
 
-    <div class="container">
-        <center>
-            <div class="play" data-toggle="modal" data-target="#myModal"> <i class="fa fa-play-circle-o" style="font-size:6em;"></i></div>
+        <div class="container">
+            <center>
+                <div class="play" data-toggle="modal" data-target="#myModal"> <i class="fa fa-play-circle-o" style="font-size:6em;"></i></div>
 
-        </center>
-    </div>
+            </center>
+        </div>
 
 
-</div>*@
+    </div>*@
 
 <!--nota-->
-<section class="imagen_directorio">
-    <img src="~/img/Img_Web2/ahorro.png" alt="Numero principal: 7366087" />
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/ahorro.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/ahorro_cel.png" alt="Numero principal: 7366087" />
 </section>
 
 <section id="textura">
@@ -413,7 +414,7 @@
         </div>
     </div>
     <!-- LA FIGURA NARANJA ES DESDE https://getwaves.io/  PUED E COPIAR Y PEGAR EL SVG GENERADO-->
-    
+
 </div>
 <div class="container-fluid" style="margin-bottom: -6px;">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(252,132,4,0.9)" fill-opacity="1" d="M0,32L80,42.7C160,53,320,75,480,112C640,149,800,203,960,213.3C1120,224,1280,192,1360,176L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
