--- a/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
@@ -17,10 +17,15 @@
 
     #heading-breadcrumbs {
         background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/background_pagos.jpg) center;
-        padding: 6 0px 0;
+        padding: 6px 0px 0;
         /* margin-bottom: 40px; */
     }
 </style>
+
+<section class="imagen_baner">
+    <img class="img_desk" src="~/img/Img_Web2/canales_pago.png" alt="Numero principal: 7366087" />
+    <img class="img_phone" src="~/img/Img_Web2/canales_pago_cel.png" alt="Numero principal: 7366087" />
+</section>
 
 <section class="container__Convenio">
     <div class="pago__Header">
