--- a/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Shared/Footer.cshtml
@@ -51,9 +51,9 @@
 
     <!-- CONTENTT FOOTER-->
     <div class="container-fluid container-content-footer">
-        
+
         <div class="row row-content-footer">
-            
+
             <div class="col-12 col-md-6 col-contact-footer">
                 <ul class="list-contact-footer">
                     <li class="item">
@@ -98,7 +98,7 @@
     </div>
 
     <!-- TERMS FOOTER -->
-    <div class="container-fluid container-footer-top" >
+    <div class="container-fluid container-footer-top">
         <div class="container">
             <div class="row">
                 <div class="col-12">
@@ -107,4 +107,8 @@
             </div>
         </div>
     </div>
+
+    <a href="https://api.whatsapp.com/send?phone=573216972161" target="_blank">
+        <div class="icono_whatsapp"></div>
+    </a>
 </footer>
