--- a/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
@@ -18,6 +18,7 @@
 }*/
 
 .container_prin {
+    padding-top:20px;
     max-width: 1400px;
     margin: 0 auto;
 
@@ -762,7 +763,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            /*border: 1px solid red;*/
+            /*border: 1px solid yellow;*/
             margin: 10px;
 
             .img_subcontainer {
@@ -785,7 +786,6 @@
     .container__Noticias {
         max-width: 1400px;
         margin: auto;
-
 
 
         @media screen and (max-width:400px ) {
@@ -842,24 +842,33 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            border: 1px solid red;
+            /*border: 1px solid red;*/
             margin: 10px;
             height: auto;
             max-height: 450px;
             background-color: #fff;
+            box-shadow: 0px 5px 10px -5px rgba(0, 0, 0, 0.5);
+            transition: all 0.2s ease-in-out;
+            border-radius: 20px;
+            overflow: hidden;
+
+            &:hover {
+                transform: translate3d(0,-10px,0);
+
+                .noticia_fecha {
+                    background-color: $secondary-color;
+                }
+            }
 
             .img_notica {
                 width: 100%;
                 height: 230px;
-                background-color: red;
-                overflow: hidden;
 
                 .img-contenedor-noticia {
                     width: 100%;
                     height: 100%;
                     object-fit: cover;
                 }
-
             }
 
             .titulo_noticia {
