--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -5,166 +5,8 @@
     ViewBag.activo = "Portafolio";
 
 }
-<style>
-    #heading-breadcrumbs {
-        background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/backgroun_ahorro.jpg) center;
-        padding: 60px 0;
-        /* margin-bottom: 40px; */
-    }
-    .bs-callout {
-        padding: 20px;
-        margin-top: 20px 0;
-        border: 1px solid #ce4844;
-        border-left-width: 10px;
-        border-radius: 3px;
-        background-color: white;
-    }
-
-    .box-image-text {
-        background: rgba(255, 255, 255, 0.83);
-        border-radius: 3px;
-        width: 350px;
-        height: 265px;
-        margin-left: 2px;
-        position: relative;
-        -webkit-box-shadow: 1px 9px 98px -12px rgba(17,18,18,1);
-        -moz-box-shadow: 1px 9px 98px -12px rgba(17,18,18,1);
-        box-shadow: 1px 9px 98px -12px rgba(17,18,18,1);
-    }
-
-    .bar.background-white {
-        background: rgba(255, 255, 255, 0);
-    }
-
-    .image:hover {
-        transform: scale(0.8);
-    }
-
-    @* margen cuadros blancos *@
-
-    .blanco {
-         margin-left: 7%
-    }
-
-    .play:hover {
-        background: #237fef;
-        transition: 2s;
-    }
-
-    .play {
-        width: 6em;
-        border-radius: 150%;
-        text-align: center;
-        background-color: #da4d4d;
-        font-size: 3em;
-        color: white;
-        transition: 2s;
-    }
-
-    .modal-body {
-        background-color: #DAFDFD;
-    }
-
-    .modal-header {
-        border-top-left-radius: 6px;
-        border-top-right-radius: 6px;
-        background-color: #da4d4d;
-    }
-
-    .modal-footer {
-        border-bottom-left-radius: 6px;
-        border-bottom-right-radius: 6px;
-        background-color: #da4d4d;
-    }
-
-    .top {
-        margin-bottom: 20px;
-    }
-
-    #col {
-        margin-right: 69px;
-    }
 
 
-    #imagenes {
-        padding-bottom: 45px;
-        margin: auto;
-        padding-top: 20px;
-        margin-top: -20px;
-        @*-moz-box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);
-        box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);*@
-    }
-
-    .content {
-        margin: 10px;
-        text-justify: auto;
-    }
-
-    p {
-        font-size: 15px
-    }
-
-    #textura {
-        background-color: rgba(252,132,4,0.9);
-        -webkit-box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);
-        -moz-box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);
-        box-shadow: -1px 3px 38px 0px rgba(0,0,0,0.75);
-        padding-top: 20px;
-        /*margin-top: -20px;*/
-        margin-bottom: 20px;
-        padding-bottom: 20px;
-    }
-</style>
-
-    @*<script type="text/javascript">
-        var _smartsupp = _smartsupp || {};
-        _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
-        window.smartsupp || (function (d) {
-            var s, c, o = smartsupp = function () { o._.push(arguments) }; o._ = [];
-            s = d.getElementsByTagName('script')[0]; c = d.createElement('script');
-            c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
-            c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
-        })(document);
-    </script>*@
-
-<!-- estilo para imagen con parallax-->
-<link rel="stylesheet" type="text/css" href="~/Content/parallax.css">
-
-<!-- Modal video -->
-<div id="myModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Nuestros Ahorros</h4>
-            </div>
-            <div class="modal-body">
-                <video id="miv" src="~/Videos/ahorrosfin1.mp4" width="100%" controls></video>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" onclick="stop()" data-dismiss="modal">Cerrar</button>
-            </div>
-        </div>
-
-    </div>
-</div>
-<!-- slider-->
-<!--seccion video-->
-@*<div class="parallaxbox1" id="pb0" style="background-image:url(/img/ahorro1-2.jpg)">
-
-        <div class="container">
-            <center>
-                <div class="play" data-toggle="modal" data-target="#myModal"> <i class="fa fa-play-circle-o" style="font-size:6em;"></i></div>
-
-            </center>
-        </div>
-
-
-    </div>*@
-
-<!--nota-->
 <section class="imagen_baner">
     <img class="img_desk" src="~/img/Img_Web2/ahorro.png" alt="Numero principal: 7366087" />
     <img class="img_phone" src="~/img/Img_Web2/ahorro_cel.png" alt="Numero principal: 7366087" />
@@ -179,10 +21,20 @@
             bajos costos financieros y un amplio portafolio.
         </p>
     </div>
-
 </section>
 
+
 <section class="page__Credito">
+    @*@foreach (var agencia in Model)
+    {
+        if (agencia.Departamento == "Nariño")
+        {
+            <div id="@agencia.Id" class="agencias agencia_2">
+                <img src="@agencia.Url" />
+                <p>@agencia.Nombre</p>
+            </div>
+        }
+    }*@
     <article>
         <a class="tipo_4" href="/Home/Productos/#cuentaCofiahorrito">
             <img class="imagen_ahorro" src="~/img/cofiahorrito.png">
@@ -232,7 +84,6 @@
         </a>
     </article>
 </section>
-
 
 <!--contenido-->
 <div id="imagenes" class="row" style="background-color: #ffffff;display:none;">
@@ -406,11 +257,9 @@
                                 <br /><br />
                             </p>
                         </div>
-
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
     <!-- LA FIGURA NARANJA ES DESDE https://getwaves.io/  PUED E COPIAR Y PEGAR EL SVG GENERADO-->
@@ -422,96 +271,3 @@
 
 
 
-
-<!---->
-<!--imagen 1-->
-@*- <div class="parallaxbox1" id="pb1" style="background-image:url(/img/ahorro1-2.jpg) ">
-            <!--boton simulador-->
-            <div class="container" style="padding-top:1em; ">
-                <div class="well" style="max-width:400px; margin:0 auto 10px;">
-                    <!--<button id="miBoto" style="background-color:#da4d4d; background-size:20px;" type="button" class="btn btn-primary btn-lg btn-block" ><a style="color:white" href="~/SimuladorCDAT/Details">Simuladores</a></button>-->
-    <a href="~/SimuladorCDAT/Details">
-        <img src="~/img/simulador.png" alt="Simulador de Ahorro" style="width:350px;height:42px;border:0;">
-    </a>
-            </div>
-
-        </div>
-    </div>*@
-<!--estilos-->
-<section style="margin-bottom:0px;">
-    <style>
-        #miBoton {
-            margin-top: 80px;
-            position: absolute;
-            display: block;
-            width: 100%;
-            height: 150px;
-            border: none;
-            padding-left: 40px; /* 40 píxeles a la izquierda para que no se amontone con la flecha */
-            background: url("/img/button_0002_Capa-2.png") no-repeat center; /* Imagen sin repetir y en la parte superior */
-            font-size: 50px; /*Aumentamos el tamaño de la fuente */
-            font-weight: bold; /* Y la ponemos en negrita */
-            color: #FFF;
-            transition: 1s;
-        }
-
-            #miBoton:hover {
-                /*opacity: 0.9;*/
-                transition: 1s;
-                background: url("/img/button_0001_Capa-3-copia.png") no-repeat center; /* Al pasar el ratón se ubica en la parte inferior */
-            }
-    </style>
-
-
-
-</section>
-<!-- scrip para parallax-->
-<script type="text/javascript">
-    function parallax() {
-        setpos("#pb0");
-        setpos("#pb1");
-
-    }
-
-
-
-    function setpos(element, factor) {
-        factor = factor || 2;
-
-        var offset = $(element).offset();
-        var w = $(window);
-
-        var posx = (offset.left - w.scrollLeft()) / factor;
-        var posy = (offset.top - w.scrollTop()) / factor;
-
-        $(element).css('background-position', '100% ' + posy + 'px');
-
-        // use this to have parralax scrolling vertical and horizontal
-        //$(element).css('background-position', posx+'px '+posy+'px');
-    }
-
-    $(document).ready(function () {
-        parallax();
-    }).scroll(function () {
-        parallax();
-    });
-</script>
-<!--funcion cerrar del video-->
-<script>
-    var myVideo = document.getElementById("miv");
-    $('#myModal').on('hide.bs.modal', function (e) {
-        // do something...
-        myVideo.pause();
-    })
-
-    function stop() {
-        var myVideo = document.getElementById("miv");
-        if (myVideo.play) {
-            myVideo.pause();
-
-        }
-        else {
-            myVideo.play();
-        }
-    }
-</script>
