--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -14,7 +14,7 @@
 
 <section id="textura">
     <div class="container">
-        <p class="text-justify" style="color:#eeeeee; font-size:20px;margin-top:20px;">
+        <p class="text-justify" style="color:#eeeeee;padding:20px; font-size:20px;margin:20px auto;background:rgba(252,132,4,0.9);max-width:1400px;">
             Teniendo en cuenta las condiciones y necesidades de la población,
             <strong>COFINAL®</strong> ha diseñado un amplio portafolio de productos de ahorros, con el propósito de sembrar
             y cultivar en sus asociados, el buen hábito del ahorro, estimulándolo con atractivas tasas de interés,
